test/libyul/yulSyntaxTests/switch_invalid_expr_2.yul
{
    switch mload
    case 1 {}
    default {}
}
// ----
// ParserError 2314: (23-27): Expected '(' but got reserved keyword 'case'
